# Harness-DB-CodeMind

./: .env.example  .gitignore  README.md  README_EN.md  draw_architecture.py  draw_architecture_en.py  pyproject.toml  structure.md
codemind/: __init__.py  cli.py
codemind/agents/: base.py  budget_controller.py  graph_builder.py  graph_retrieval.py  impact_analysis.py  lineage_builder.py  llm_reasoning.py  query_parser.py  risk_scoring.py
codemind/api/: server.py
codemind/core/: config.py  models.py  orchestrator.py
codemind/deterministic/: cpg_builder.py  git_analyzer.py  program_slicer.py  sql_parser.py
codemind/knowledge/: embedding_index.py  neo4j_store.py
tests/: test_core.py  test_erp.py  test_persistence.py
tests/test_data/: ecommerce_procedures.sql  erp_stored_procedures.sql
